--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -112,33 +113,86 @@
     </nav>
 
     <!-- Header Section (top) -->
-    <div class="header">
-      <div class="header-top">
-        <div class="search">
-          <div class="search-logo">
-            <img src="/assets/magnify.png" alt="">
+    <header>
+      <div class="header">
+        <div class="header-top-left">
+          <img src="./assets/magnify.png" class="header-icon" alt="#">
+          <input type="text" name="searchbar" class="searchbar">
+        </div>
+
+        <div class="header-top-right">
+          <img src="./assets/bell.png" class="header-icon" alt="">
+          <img src="https://www.pngarts.com/files/3/Avatar-PNG-Download-Image.png" class="avatar-small" alt="">
+          <h4>Morgan Oakley</h4>
+        </div>
+
+        <div class="header-bottom-left">
+          <div>
+            <img src="https://www.pngarts.com/files/3/Avatar-PNG-Download-Image.png" class="avatar-big" alt="">
           </div>
-          <div class="search-bar">
-            <input type="search">
+          <div>
+            <p>Hi there,</p>
+            <h2>Morgan Oakley (@morgan)</h2>
           </div>
         </div>
-        <div class="profile">
-          <div class="notification-logo">
-            ASD
-          </div>
-          <div class="profile-picture">
 
-          </div>
-          <div class="profile-name">
+        <div class="header-bottom-right">
+          <button>
+            New
+          </button>
+          <button>
+            Upload
+          </button>
+          <button>
+            Share
+          </button>
+        </div>
 
+      </div>
+    </header>
+
+    <main>
+      <div class="main-content">
+        <div class="main-content-left">
+          <div class="main-content-title">
+            Your Projects
+          </div>
+          <div class="main-project">
+            <div class="main-project-text"></div>
+            <div class="main-project-icons"></div>
+          </div>
+          <div class="main-project">
+            <div class="main-project-text"></div>
+            <div class="main-project-icons"></div>
+          </div>
+          <div class="main-project">
+            <div class="main-project-text"></div>
+            <div class="main-project-icons"></div>
+          </div>
+          <div class="main-project">
+            <div class="main-project-text"></div>
+            <div class="main-project-icons"></div>
+          </div>
+          <div class="main-project">
+            <div class="main-project-text"></div>
+            <div class="main-project-icons"></div>
+          </div>
+          <div class="main-project">
+            <div class="main-project-text"></div>
+            <div class="main-project-icons"></div>
           </div>
         </div>
       </div>
-      <div class="header-bottom">BOTTOM</div>
-    </div>
-
-
+    </main>
   </div>
 </body>
 
 </html>
+
+<!--
+<img src="https://www.pngarts.com/files/3/Avatar-PNG-Download-Image.png" alt="">
+<img src="https://www.pngarts.com/files/3/Avatar-PNG-High-Quality-Image.png" alt="">
+<img src="https://www.pngarts.com/files/11/Avatar-PNG-Transparent-Image.png" alt="">
+<img src="https://www.pngarts.com/files/11/Avatar-PNG-Download-Image.png" alt="">
+<img src="https://www.pngarts.com/files/3/Employee-Avatar-PNG-Image-with-Transparent-Background.png" alt="">
+-->
