left side of main-content styled

--- a/index.html
+++ b/index.html
@@ -151,39 +151,147 @@
       </div>
     </header>
 
-    <main>
-      <div class="main-content">
-        <div class="main-content-left">
-          <div class="main-content-title">
-            Your Projects
+    <!-- Main Content Section -->
+
+    <div class="main-content">
+      <div class="main-content-left">
+        <div class="main-content-title">
+          Your Projects
+        </div>
+        <div class="main-project">
+          <div class="main-project-text">
+            <h4>Super Cool Project</h4>
+            <p>
+              Sed tempus ut lacus ut scelerisque.<br>
+              Suspendisse sollicitudin nibh erat, id facilisis felis 
+              accumsan nec.
+            </p>
           </div>
-          <div class="main-project">
-            <div class="main-project-text"></div>
-            <div class="main-project-icons"></div>
+          <div class="main-project-icons">
+            <a href="#"><img src="./assets/star-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/eye-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/source-fork.svg" alt="" class="project-icon"></a>
           </div>
-          <div class="main-project">
-            <div class="main-project-text"></div>
-            <div class="main-project-icons"></div>
+        </div>
+        <div class="main-project">
+          <div class="main-project-text">
+            <h4>Less Cool Project</h4>
+            <p>
+              Nullam condimentum ipsum ut lectus vehicula consectetur.
+              Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor.
+              Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+            </p>
           </div>
-          <div class="main-project">
-            <div class="main-project-text"></div>
-            <div class="main-project-icons"></div>
+          <div class="main-project-icons">
+            <a href="#"><img src="./assets/star-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/eye-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/source-fork.svg" alt="" class="project-icon"></a>
           </div>
-          <div class="main-project">
-            <div class="main-project-text"></div>
-            <div class="main-project-icons"></div>
+        </div>
+        <div class="main-project">
+          <div class="main-project-text">
+            <h4>Impossible App</h4>
+            <p>
+              In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit
+              sagittis id.
+            </p>
           </div>
-          <div class="main-project">
-            <div class="main-project-text"></div>
-            <div class="main-project-icons"></div>
+          <div class="main-project-icons">
+            <a href="#"><img src="./assets/star-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/eye-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/source-fork.svg" alt="" class="project-icon"></a>
           </div>
-          <div class="main-project">
-            <div class="main-project-text"></div>
-            <div class="main-project-icons"></div>
+        </div>
+        <div class="main-project">
+          <div class="main-project-text">
+            <h4>Easy Peasy App</h4>
+            <p>
+              Etiam cursus eros ac efficitur fringilla. <br>
+              Vestibulum dignissim urna eget accumsan aliquam. Curabitur
+              dignissim nisi in tortor commodo, ac bibendum magna tincidunt.
+            </p>
+          </div>
+          <div class="main-project-icons">
+            <a href="#"><img src="./assets/star-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/eye-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/source-fork.svg" alt="" class="project-icon"></a>
+          </div>
+        </div>
+        <div class="main-project">
+          <div class="main-project-text">
+            <h4>Ad Blocker</h4>
+            <p>
+              Quisque eget rutrum nisl. Nam augue justo, cursus vitae
+              metus vel, pharetra hendrerit felis. Aliquam sed malesuada
+              eros.
+            </p>
+          </div>
+          <div class="main-project-icons">
+            <a href="#"><img src="./assets/star-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/eye-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/source-fork.svg" alt="" class="project-icon"></a>
+          </div>
+        </div>
+        <div class="main-project">
+          <div class="main-project-text">
+            <h4>Money Maker</h4>
+            <p>
+              Praesent convallis, libero quis congue elementum, nunc
+              ante faucibus sapien, ac scelerisque tortor purus sit amet ex.
+              Pallentesque mollis nec sem vel aliquam.
+            </p>
+          </div>
+          <div class="main-project-icons">
+            <a href="#"><img src="./assets/star-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/eye-plus-outline.svg" alt="" class="project-icon"></a>
+            <a href="#"><img src="./assets/source-fork.svg" alt="" class="project-icon"></a>
           </div>
         </div>
       </div>
-    </main>
+      <div class="main-content-right">
+        <div class="main-content-title">
+          <h4>Announcements</h4>
+        </div>
+          <div class="announcements">
+            <div class="announcement announcement-border">
+              <h5>Site Maintenence</h5>
+              <p>
+                Vestibulum condimentum tellus lacus, 
+                in accumsan elit maximus ac. Donec
+                hendrerit sodales congue...
+              </p>
+            </div>
+            <div class="announcement announcement-border">
+              <h5>Community Share Day</h5>
+              <p>
+                Nam vel lectus tincidunt, rutrum nulla
+                eu, ornare libero. Aliquam dictum accusan
+                porttitor...
+              </p>
+            </div>
+            <div class="announcement">
+              <h5>Updated Privacy Policy</h5>
+              <p>
+                Phasellus efficitur nisi eget elit consectetur,
+                eget condimentum ante auctor. Cras fringilla 
+                sagittis sem in mattis...
+              </p>
+            </div>
+          </div>
+          <div class="main-content-title">
+            <h4>Trending</h4>
+          </div>
+          <div class="main-content-right-lower">
+            <div class="trendings">
+              <div class="trending">
+
+              </div>
+              <div class="trending"></div>
+              <div class="trending"></div>
+            </div>
+          </div>
+      </div>
+    </div>
   </div>
 </body>
 
