announcements and trending fixed and styled

--- a/index.html
+++ b/index.html
@@ -278,16 +278,37 @@
               </p>
             </div>
           </div>
-          <div class="main-content-title">
+          <div class="main-content-trending-title">
             <h4>Trending</h4>
           </div>
-          <div class="main-content-right-lower">
-            <div class="trendings">
-              <div class="trending">
-
+          <div class="trendings">
+            <div class="trending">
+              <img src="./assets/Employee-Avatar-Transparent-Image.png" alt="" class="avatar-small">
+              <div class="trending-text">
+                <p class="profile">@tegan</p>
+                <p>World Peace Builder</p>
               </div>
-              <div class="trending"></div>
-              <div class="trending"></div>
+            </div>
+            <div class="trending">
+              <img src="./assets/Avatar-PNG-Download-Image.png" alt="" class="avatar-small">
+              <div class="trending-text">
+                <p class="profile">@morgan</p>
+                <p>Super Cool Project</p>
+              </div>
+            </div>
+            <div class="trending">
+              <img src="./assets/Avatar-PNG-High-Quality-Image.png" alt="" class="avatar-small">
+              <div class="trending-text">
+                <p class="profile">@kendall</p>
+                <p>Life Changing App</p>
+              </div>
+            </div>
+            <div class="trending">
+              <img src="./assets/Avatar-PNG-High-Quality-Image.png" alt="" class="avatar-small">
+              <div class="trending-text">
+                <p class="profile">@alex</p>
+                <p>No Traffic Maker</p>
+              </div>
             </div>
           </div>
       </div>
